--- a/gb/news392_5.md
+++ b/gb/news392_5.md
@@ -22,7 +22,18 @@
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/13/n11720107.md#1" target="_blank">王友群：香港人抗争半年的十项成果</a><br></h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/13/n11720107.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15de965ef960077a_ttl7daycn5_bg120811-150x120.jpg" align ="left"></a>6月爆发的香港反送中运动，是香港有史以来参加人数最多、持续时间最长、取得实际成果最丰、在国内外影响最大的反抗中共暴政运动。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 4:43 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/13/n11719585.md#1" target="_blank">【名家专栏】“富人税”是在“劫富济贫”？</a><br></h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/13/n11719585.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1192569006-crop-1200x720-150x120.jpg" align ="left"></a>“富人税”（财产税）不会让一个穷人变得富有，但是它确实可以成为很多人眼中的亮闪闪的词藻。向社会富裕阶层的财富开刀已经被称为是社会主义的“阶级斗争”的缩影。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 2:01 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/13/n11720077.md#1" target="_blank">李铭：警察酷刑迫害 中共灭绝人性</a><br></h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/13/n11720077.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1907182226301973-150x120.jpg" align ="left"></a>信仰“真、善、忍”的法轮功群体，历经漫漫二十年，中共迫害未曾停歇。据明慧网信息统计，二零一九年十一月份至少有49名法轮功学员被非法判刑，77人被非法庭审，44人被抓捕，124人被构陷到检察院、法院，13名65岁以上老年法轮功学员被冤判和非法庭审。仅今年一至十一月份，就有683人遭非法判刑，89名法轮功学员被迫害离世。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 1:10 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/12/n11719442.md#1" target="_blank">黄天辰：盘点名人轶事 为中共站台的“礼物”</a><br></h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/12/n11719442.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/Untitled-14-150x120.jpg" align ="left"></a>最近有个现象值得深思，替中共站台的很多名人，会得到意外的“礼物”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 11:55 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/15/n11723337.md#1" target="_blank">陈达：《时代》二零一九年度人物评选感言</a><br></h3>二零一九人物选，
+港众得票遥领先。
+风头盖过中共头，
+再唤良知向明天。
+不料杂志社老板，
+戏弄读者逗你玩。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 10:09 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/14/n11723228.md#1" target="_blank">海网：正告张晓明们</a><br></h3>张晓明，明嚣张。捅大漏，暗恐慌。
+怕问责，胡妄想。罪掩罪，再乱港。
+卄三条，复摇晃。吹死灰，梦火旺。
+徒贻笑，逗大方。无神眼，超级盲。
+似不信，天灭党。党就会，永不亡。
+天理公，天网洪。恶必有，恶报应。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 7:45 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/14/n11723056.md#1" target="_blank">云鹤天：退党</a><br></h3>有位女教授
 随夫要出国
 因为是党员
@@ -54,6 +65,5 @@
 一尊梦空 奸佞弄权
 绞肉不止 内斗不断
 马列鬼路 越奔越远......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 1:49 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/13/n11719997.md#1" target="_blank">袁斌：GDP全球第二与关押记者世界最多</a><br></h3>2019年10月17日，31岁的大陆独立记者黄雪琴被广州警方刑事拘留，罪名是“挑衅滋事”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 12:39 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/news392_4.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/dueiwa2503/djy/blob/master/gb/news392.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/dueiwa2503/djy/blob/master/gb/news392_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/dueiwa2503/djy/blob/master/gb/news392_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/dueiwa2503/djy/blob/master/gb/news392_4.md#1">4</a>&nbsp;&nbsp;5&nbsp;&nbsp;<a href="https://github.com/dueiwa2503/djy/blob/master/gb/news392_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/dueiwa2503/djy/blob/master/gb/news392_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/dueiwa2503/djy/blob/master/gb/news392_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/dueiwa2503/djy/blob/master/gb/news392_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/dueiwa2503/djy/blob/master/gb/news392_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/dueiwa2503/djy/blob/master/gb/news392_6.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/dueiwa2503/djy/blob/master/gb/news392_5.md#1<br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/news392_5.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/dueiwa2503/djy/blob/master/gb/news392_5.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news392_5.htm">http://www.epochtimes.com/gb/news392_5.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
