--- a/gb/nsc413_4.md
+++ b/gb/nsc413_4.md
@@ -19,15 +19,22 @@
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/21/n11736943.md#1" target="_blank">标致雪铁龙从大陆撤资 传宝能接手</a><br></h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/21/n11736943.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/04/604190946251767-150x120.jpg" align ="left"></a>有消息人士日前表示，宝能集团将接手长安标致雪铁龙50％股份，标致雪铁龙将退出中国市场。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 6:37 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/21/n11737133.md#1" target="_blank">大纪元声明：吁脸书更正对大纪元不实言论</a><br></h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/21/n11737133.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/04/Distribution_Presentation_March2018_1.5_Allpapers_slide-150x120.jpeg" align ="left"></a>Facebook声称已删除与大纪元媒体集团有关联的BL网站（美丽日报）账号。 Facebook将BL网站与大纪元媒体集团做连结是错误的。此外，Facebook在声明大纪元媒体集团与BL之间有关联之前，并没有与大纪元媒体集团联络确认。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 6:00 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/21/n11736961.md#1" target="_blank">蓬佩奥：中国人民正在抵制共产党</a><br></h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/21/n11736961.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/06/190621222928100699-150x120.jpg" align ="left"></a>美国国务卿蓬佩奥（Mike Pompeo）在周三（12月18日）表示，中国人民与中国共产党不同。中国人民希望生活在自由的社会，也不支持共产党。他们正在抵制中共。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 4:46 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/21/n11736689.md#1" target="_blank">又是“无一验收通过” 甘肃关闭全部P2P</a><br></h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/21/n11736689.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/01/0cfc7f1dfaca21a50d3e63edb3e4984a-150x120.jpg" align ="left"></a>12月19日，甘肃省官方发布消息说因为没有一家P2P网贷平台验收合格，甘肃省的27家P2P全部退出市场。目前为止，大陆几个全部关闭P2P平台的省市给出的理由全是“没有通过验收”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 4:29 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/21/n11736392.md#1" target="_blank">“自干五”花千芳替母养老维权 遭网民嘲讽</a><br></h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/21/n11736392.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/440dce5aeac66d14adcc65a38bf15914-600x400-1-150x120.jpg" align ="left"></a>对花千芳在网上维权吐槽，大陆独立时评人士张起表示，他不会同情花千芳，“对于花千芳这样的人，更多的是看他的笑话，很少有怜悯的心，因为他用网红的社会地位和社会身份仍然在帮他的母亲做努力。他在微博上第二个帖子里说的3点包含很多不堪的算计，他委婉提出要求几十万的赔偿，因为我网红的地位和名人效应，我跟小老百姓不一样，可以给辽宁省带来很多麻烦，不解决问题还可以持续闹，这.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 4:25 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/21/n11736511.md#1" target="_blank">【拍案惊奇】香港监狱外抗争 澳门监狱里庆祝</a><br></h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/21/n11736511.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Capture-6-150x120.jpg" align ="left"></a>今天在香港，有很多事件发生，比如大埔的开枪案件，警方说开枪的人是2019年年初一个藏枪案的通缉犯所为，但事件发生时，引发民众前去现场质询情况，警察发催泪弹驱赶的事情；另外，前日被捕的香港“星火同盟”4个人，都得到保释，星火也说资金援助被捕者的工作不受影响，会继续进行。但是星火的7000万港元资金，还有洗黑钱的指控等问题，仍没有解决，在法律程序中。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 2:26 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/22/n11738149.md#1" target="_blank">中山市古镇一小区住宅着火 一家六口遇难</a><br></h3>12月22日凌晨，广东中山市古镇镇晋南路一小区住宅发大火，导致6人死亡。
+
+“灯都古镇”微信公众号消息，12月22日凌晨，古镇镇晋南路一小区住宅发生火灾。凌晨2时3分，消防部门赶赴现场灭火，一直到凌晨3时许明火才被扑灭，现场清理时发现6人死亡。
+
+目前火灾原因仍在调查中。
+
+“中山发布”微信公众号消息，死者为屋主区某夫妇、一儿两女和区某母亲。
+.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 3:00 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/22/n11738135.md#1" target="_blank">久坐玩手机每天吃汉堡 扬州男童患重度脂肪肝</a><br></h3>近日，江苏扬州9岁男童优优（化名）因肺炎就医。医生注意到，优优的体重竟有120斤，一检查，发现他还患上了重度脂肪肝。原来，优优爱玩手机，经常久坐不动，还每天吃汉堡喝饮料。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 2:20 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/22/n11738059.md#1" target="_blank">沪男子图好玩点燃杨絮 烧毁3770万财产</a><br></h3>今年5月，上海青浦39岁男子汪某出于好玩，用打火机点燃一堆白杨絮。白杨絮起火后引燃一旁的塑料废品等可燃物，火势蔓延到邻近的一家公司内，使该公司冷库着火烧毁。此次事故造成直接经济损失超3770万元人民币。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 1:24 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/22/n11737928.md#1" target="_blank">又一求救信 英女孩圣诞卡惊现上海囚犯信息</a><br></h3>圣诞节将至，一位英国女孩在乐购（Tesco）的慈善圣诞卡上发现一则求救信息，是来自上海青浦监狱里的一些外国囚犯。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 11:46 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/22/n11737991.md#1" target="_blank">每日三退声明精选（2019/12/21）</a><br></h3>我因为在去年P2P的金融灾难中，已经倾家荡产，无法生活。那位诈骗犯逃到美国一年多了，我们向各级政府反映问题，要求惩办诈骗犯。结果政府和黑警却抓捕、殴打、恐吓、关押维权的受害者，我们过着生不如死的日子，天下之大怎么就没有说理的地方呢？在反思过程中终于醒悟，我们全国3.2亿的金融灾民被诈骗的原因就是我们太相信政府和大裤衩的新闻，以至于我们误判了国内的经济状况，其.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 11:37 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/21/n11737459.md#1" target="_blank">超时加班和抑郁 长安福特30岁工程师跳楼亡</a><br></h3>12月20日，一条题为《长安福特AE工程师之死》的文章在网上广泛传播。文章作者称自己的丈夫邓某某为长安福特汽车有限公司一名工程师，入职8年，由于工作压力大，持续加班患上抑郁症，年仅30岁抑郁跳楼身亡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 1:58 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/21/n11736394.md#1" target="_blank">【翻墙必看】林郑丈夫对中共发出无声抗议的背后</a><br></h3>澳门主权移交20周年，19日晚在东亚运动会体育馆举行文艺晚会，香港特首林郑月娥同丈夫林兆波都有出席。现场播放《歌唱祖国》时，当全场高歌拍掌时，唯独林兆波木然站立不配合的一幕引发各界热议。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 9:32 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/21/n11737039.md#1" target="_blank">郴州电视台台长与政法委书记联手敛财</a><br></h3>中共湖南省郴州市广播电视台前台长张春阳被指与亲家、前政法委书记刘志伟合谋敛财，共涉金额数百万元人民币。日前，张春阳案开庭审理。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 6:14 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/21/n11736993.md#1" target="_blank">吉林载37人巴士侧滑坠江 6人死亡</a><br></h3>12月21日，吉林通化市一辆载有39人的巴士在江边发生侧滑，造成4人死亡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 5:43 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/21/n11736935.md#1" target="_blank">三商人实名举报：江西前副省长索贿上亿元</a><br></h3>近日，中共江西省前副省长、赣州市委书记、江西省人大副主任史文清，被当地三名商人公开实名向中纪委举报，指史大肆敛财，索贿上亿元（人民币，下同）的黄金或现金。此外，史文清还被举报包养多名情妇等。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 4:54 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/21/n11736910.md#1" target="_blank">工作人员在陕西兵马俑坑内洒水引网友热议</a><br></h3>近日,大陆网络上流传出多名工作人员在陕西秦始皇兵马俑景区内洒水，许多网友质疑是破坏文物。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 4:04 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/21/n11736771.md#1" target="_blank">四川轻化工大学副教授因言受罚</a><br></h3>中国大专院校学术自由空间持续萎缩。四川轻化工大学副教授李志被指发表不当言论，违反了高校教师准则，近期受到校方行政处罚，并被调离其所任职的马克思主义学院。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 3:46 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/nsc413_3.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/dueiwa2503/djy/blob/master/gb/nsc413.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/dueiwa2503/djy/blob/master/gb/nsc413_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/dueiwa2503/djy/blob/master/gb/nsc413_3.md#1">3</a>&nbsp;&nbsp;4&nbsp;&nbsp;<a href="https://github.com/dueiwa2503/djy/blob/master/gb/nsc413_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/dueiwa2503/djy/blob/master/gb/nsc413_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/dueiwa2503/djy/blob/master/gb/nsc413_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/dueiwa2503/djy/blob/master/gb/nsc413_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/dueiwa2503/djy/blob/master/gb/nsc413_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/dueiwa2503/djy/blob/master/gb/nsc413_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/dueiwa2503/djy/blob/master/gb/nsc413_5.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/dueiwa2503/djy/blob/master/gb/nsc413_4.md#1<br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/nsc413_4.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/dueiwa2503/djy/blob/master/gb/nsc413_4.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nsc413_4.htm">http://www.epochtimes.com/gb/nsc413_4.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
